deploy/ocp/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-neo4j-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi-neo4j
  template:
    metadata:
      labels:
        app: fastapi-neo4j
    spec:
      containers:
        - name: neo4j
          image: neo4j:latest
          ports:
            - containerPort: 7474
            - containerPort: 7687
        - name: fastapi
          image: quay.io/rbrhssa/reports-api:latest
          ports:
            - containerPort: 8000
