deploy/ocp/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: fastapi-neo4j-route
spec:
  to:
    kind: Service
    name: fastapi-neo4j-service
  port:
    targetPort: 8000
  wildcardPolicy: None  # Change to 'Subdomain' if needed for wildcard subdomains
